lab3/frontend_replica_set.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab3

---
apiVersion: v1
kind: Service
metadata:
  name: lab3-service
  namespace: lab3
spec:
  selector:
    app: lab3-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
