lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  namespace: lab3
spec:
  tls:
  - hosts: 
      - lab3-app.info
    secretName: lab3-secret
  rules:
  - host: lab3-app.info
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lab3-service
              port: 
                number: 3000
